[package]
name = "toonmux"
version = "0.0.7"
authors = ["JonathanHelianthicusDoe <augiii@protonmail.com>"]
edition = "2018"
description = "Toon multiplexer for playing Toontown on X11"
repository = "https://github.com/JonathanHelianthicusDoe/toonmux"
readme = "README.md"
keywords = ["toontown", "ttr", "x11", "controller", "multiplexer"]
categories = ["games"]
license = "GPL-3.0-or-later"

[dependencies]
gdk = { version = "0.13.2", features = ["v3_22"] }
glib = "0.10.3"
gtk = { version = "0.9.2", features = ["v3_22"] }
libxdo-sys = "0.11.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
x11 = "2.18.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
