[package]
name = "toonmux"
version = "0.0.8"
authors = ["JonathanHelianthicusDoe <augiii@protonmail.com>"]
edition = "2021"
description = "Toon multiplexer for playing Toontown on X11"
repository = "https://github.com/JonathanHelianthicusDoe/toonmux"
readme = "README.md"
keywords = ["toontown", "ttr", "x11", "controller", "multiplexer"]
categories = ["games"]
license = "GPL-3.0-or-later"

[dependencies]
gdk = "0.17.0"
glib = "0.17.2"
gtk = "0.17.0"
libxdo-sys = "0.11.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
x11 = "2.21.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
strip = true
